<resources>
    <string name="app_name">WarningApp</string>
    <string name="warning">Warning</string>
    <string name="app">App</string>
    <string name="guidelines">Guidelines</string>
    <string name="settings">Settings</string>
    <string name="casesReported">Cases Reported</string>
    <string name="welcomeMessage">Hello There</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="remembercheckbox">remember me</string>
    <string name="newUserText">New User?</string>
    <string name="newAccountButton">Create an account</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="RepPassword">Re-enter password</string>
    <string name="hintFirstName">First Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintAge">Age</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="backIcon">back</string>
    <string name="next_button">Next</string>
    <string name="verify_button">Verify</string>
    <string name="hintPhone">Phone number</string>
    <string name="phoneVerificationTitle">Phone Verification</string>
    <string name="CodeVerificationTitle">Verify the code</string>
    <string name="hintCodeNumber">6 digit code</string>
    <string name="forgotPasswordTitle">Forgot Password?</string>
    <string name="forgotPasswordTitle_">Don\'t Worry </string>
    <string name="forgotPasswordMessage">Type your phone number</string>
    <string name="forgotPasswordMessage2">Select your country code</string>
    <string name="newPasswordMessage">Type your new password</string>
    <string name="hintnewPassword">New password</string>
    <string name="RepnewPassword">Re-enter new password</string>
    <string name="changePasswordButton">Change Password</string>
    <string name="verificationSuccessTitle">Your \naccount \nhas \nbeen \ncreated </string>
    <string name="verificationSuccessMessage">Login to access our features</string>
    <string name="newPassSuccessTitle_FP">Your \npassword \nhas \nbeen \nchanged </string>
    <string name="newPassSuccessMessage_FP">Login in with your new password</string>
    <string name="ban_message">Your \naccount \nhas \nbeen \npermanently \nbanned</string>
    <string name="first_message_title">Your \naccount \nhas \nreceived \nmany \nreports</string>
    <string name="first_message_sub_title">If you get more reports, your account will be permanently banned.\n \nPlease be more careful!\nTrolling and hating are not tolerated in this app</string>
    <string name="title_activity_maps">Map</string>
    <string name="Fire_">Fire</string>
    <string name="Flood_">Flood</string>
    <string name="Wildfire_">Wildfire</string>
    <string name="Hurricane_Tornado">Hurricane / Tornado</string>
    <string name="Hurricane_">Hurricane</string>
    <string name="Earthquake_">Earthquake</string>
    <string name="Tornado_">Tornado</string>
    <string name="Landslide_">Landslide</string>
    <string name="Tsunami_">Tsunami</string>
    <string name="IcyRoad_">Icy Road</string>
    <string name="CarAccident_">CarAccident</string>
    <string name="Thunderstorm_">Thunderstorm</string>
    <string name="Robbery_">Robbery</string>
    <string name="Terrorism_">Terrorism</string>
    <string name="Other_">Other</string>
    <string name="icyroad_guideline_title">Icy Road Guidelines</string>
    <string name="icyroad_guideline"> Make sure all passengers are wearing seat belts.\n
\nKeep your windows clear with the defroster and windshield wipers.\n

\nBrake, change speeds, and turn slowly and gently.\n

\nSignal early before a turn, stop, or lane change.\n

\nKeep at least three seconds distance from the vehicle in front of you.\n

\nPump your non-antilock brakes slowly and gently when you need to stop.\n

\nIf you skid, turn the wheels in the direction of the skid.\n

\nRemember that a four-wheel-drive vehicle can maneuver better on ice, but still can\'t stop quickly.\n

\nUse tire chains if recommended by local road officials.\n

</string>
    <string name="carAccident_guideline_title">Car Accident Guidelines</string>
    <string name="carAccident_guideline"> Check yourself and your passengers for injuries. If you or other passenger is injured, call the police or ask someone else to do so. If you\'re seriously injured, try not to move, and wait for help.\n

\nIf you\'re able to, move to the side of the road or a sidewalk. If your car is safe to drive pull it to the side of the road.\n

\nCall the police. The responding officers will fill out an accident report and document the scene. If the police can\'t come to the scene of the accident, you can go to the nearest police station and complete a report yourself.\n

\nWait for help. Turn off your engine and turn on your hazard lights to warn other vehicles to slow down.\n

\nAfter making sure you and any passengers are uninjured, exchange contact and insurance information with the other driver if exists.\n

\nDocument the accident: identify the officers, get a copy for your insurance company, take pictures of the cars involved, take down names, talk to any witnesses.\n

\nNotify your insurance agent and start the claims process.

</string>
    <string name="robbery_guideline_title">Robbery Guidelines</string>
    <string name="robbery_guideline"> Remain calm, do not resist and take no action that may jeopardize your safety.\n

\nFollow the robber\'s directions, but do not offer more than what they ask for. Don\'t argue.\n

\nMake mental notes of the robber\'s appearance. You\'ll need to describe the suspect when filing your report. If they come or go in a car, try to note the make and model and license plate number.\n

\nNotice what the robber does so you can include it in your report. If there are two accomplices, pay attention to any conversations they have with one another. Try to remember what they touch during the robbery so that police can check those areas for fingerprints.\n

\nAfter the robbery, go immediately to a safe location, then report the crime.\n

\nYour personal safety is your top priority. Make sure you feel secure before you call the police. If you\'re in an isolated area, move to an area with people and ask someone to stay with you while you wait for help. If you opt to remain at the crime scene, try not to touch anything.

</string>
    <string name="thunderstorm_guideline_title">Thunderstorm Guidelines</string>
    <string name="thunderstorm_guideline"> Listen to local news or NOAA Weather Radio for emergency updates. Watch for signs of a storm, like darkening skies, lightning flashes or increasing wind.\n

\nPostpone outdoor activities if thunderstorms are likely to occur.\n

\nIf a severe thunderstorm warning is issued, take shelter in a substantial building or in a vehicle with the windows closed. \n

\nIf you can hear thunder, you are close enough to be in danger from lightning. If thunder roars, go indoors! The National Weather Service recommends staying inside for at least 30 minutes after the last thunder clap.\n

\nAvoid electrical equipment and telephones. Use battery-powered TVs and radios instead.\n

\nShutter windows and close outside doors securely. Keep away from windows.\n

\nDo not take a bath, shower or use plumbing.\n

\nIf you are driving, try to safely exit the roadway and park. Stay in the vehicle and turn on the emergency flashers until the heavy rain ends. Avoid touching metal or other surfaces that conduct electricity in and outside the vehicle.\n

\nIf you are outside and cannot reach a safe building, avoid high ground; water; tall, isolated trees; and metal objects such as fences or bleachers.
</string>
    <string name="tsunami_guideline_title">Tsunami Guidelines</string>
    <string name="tsunami_guideline">
If You Feel a Strong Coastal Earthquake:\n

\nDrop, cover, and hold on to protect yourself from the earthquake.\n

\nWhen the shaking stops, gather members of your household and review your evacuation plan. A tsunami may be coming within minutes.\n

\nUse a NOAA Weather Radio or stay tuned to a Coast Guard emergency frequency station, or a local radio or television station for updated emergency information.\n

\nFollow instructions issued by local authorities. Recommended evacuation routes may be different from the one you planned, or you may be advised to climb higher.\n

\nIf you hear an official tsunami warning or detect signs of a tsunami, evacuate at once. If you evacuate, take your animals with you.\n

\nGet to higher ground as far inland as possible. Watching a tsunami from the beach or cliffs could put you in grave danger. If you can see the wave, you are too close to escape it.\n

\nAvoid downed power lines and stay away from buildings and bridges from which heavy objects might fall during an aftershock.\n

\nStay away until local officials tell you it is safe. A tsunami is a series of waves that may continue for hours. Do not assume that after one wave the danger is over. The next wave may be larger than the first one.
</string>
    <string name="landslide_guideline_title">Landslide Guidelines</string>
    <string name="landslide_guideline">
If you suspect imminent danger, evacuate immediately. Inform affected neighbors if you can, and contact fire or police department.\n

\nListen for unusual sounds that might indicate moving debris, such as trees cracking or boulders knocking together.\n

\nIf you are near a stream or channel, be alert for any sudden increase or decrease in water flow and notice whether the water changes from clear to muddy. Be prepared to move quickly.\n

\nBe especially alert when driving— watch for collapsed pavement, mud, fallen rocks and other indications of possible debris flow.\n

\nIf you are ordered or decide to evacuate, take your animals with you.\n

\nDuring Severe Storms stay alert and awake.\n

\nListen to local news stations on a battery-powered radio for warnings of heavy rainfall.
    </string>
    <string name="terrorism_guideline_title">Terrorism Guidelines</string>
    <string name="case_type"> Type</string>
    <string name="case_time">Time</string>
    <string name="case_date">Date</string>
    <string name="case_severity">Severity</string>
    <string name="case_city">City</string>
    <string name="country_case"> Country</string>
    <string name="time">TIME</string>
    <string name="author">author</string>
    <string name="case_details">details</string>
    <string name="delete_post">DELETE POST</string>
    <string name="comments">COMMENTS</string>
    <string name="comment">COMMENT</string>
    <string name="commenter">commenter</string>
    <string name="date">DATE</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="add_case">Add Case</string>
</resources>