<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        />



    <item
        android:id="@+id/search_bar"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"/>


    <item
        android:id="@+id/add_case"
        android:title="@string/add_case"
        android:icon="@drawable/ic_baseline_add_box_24"/>

    <item
        android:id="@+id/guidelines"
        android:title="@string/guidelines"
        android:icon="@drawable/ic_baseline_menu_book_24"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24"/>


</menu>