<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:animateLayoutChanges="true"
        android:clickable="false"
        android:contextClickable="false"
        android:elevation="10dp"
        android:longClickable="false"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconType"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="320dp"

                android:src="@drawable/ic_baseline_lock_24" />

            <TextView
                android:id="@+id/typeCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iconType"
                android:layout_marginStart="20dp"
                android:elevation="15dp"
                android:text="@string/case_type"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:gravity="center"
                android:text="@string/case_city"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/city"
                android:gravity="center"
                android:text="@string/country_case"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:text="@string/case_time"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/time"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:text="@string/case_date"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <!--    </RelativeLayout>-->


</RelativeLayout>