<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_color_background"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:animateLayoutChanges="true"
        android:clickable="false"
        android:contextClickable="false"
        android:elevation="10dp"
        android:longClickable="false"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/comment"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/commenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comment"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:paddingTop="5dp"
                android:text="@string/commenter"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comment"
                android:layout_marginStart="130dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:paddingTop="5dp"
                android:gravity="center"
                android:text="@string/time"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comment"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:paddingTop="5dp"
                android:gravity="end"
                android:text="@string/date"
                android:textSize="11sp" />



        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>