<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_background"
    tools:context=".login.ForgotPasswordRequestPhoneNumber">


    <TextView
        android:id="@+id/ForgotPassTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:paddingBottom="1dp"
        android:layout_marginTop="35dp"
        android:text="@string/forgotPasswordTitle"
        android:textColor="@color/white"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/ForgotPassTitle_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:paddingBottom="15dp"
        android:text="@string/forgotPasswordTitle_"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/ForgotPassTitle"
        android:textSize="25sp"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/forgotPasswordCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="20dp">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <ImageView
        android:layout_marginTop="15dp"
        android:id="@+id/backButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_marginStart="22dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/backIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />




    <TextView
        android:id="@+id/ForgotPassMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgotPasswordMessage"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ForgotPassTitle"/>





    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInput_FP"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPhone"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:textColorHint="@color/lightprimary"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/colorAccent"
        app:counterTextColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/ForgotPassMessage"
        app:layout_constraintTop_toBottomOf="@id/ForgotPassMessage">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:background="@drawable/register_frame"
            android:textColor="@color/colorPrimary">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/SelectCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/forgotPasswordMessage2"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneInput_FP"/>

    <com.hbb20.CountryCodePicker
        android:id="@+id/CountryCodePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_frame"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:ccp_showFullName="true"
        app:ccp_showFlag="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SelectCountry"/>

    <Button
        android:id="@+id/NextStep_verifyPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/next_button"
        android:textColor="@color/white"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SelectCountry"


        />



</LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>